--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -1362,72 +1362,72 @@
                                     </div>
                                 </div>
                                 <nav class="pagination">
-                                    <ul class="pagination-list">
-                                        <!-- 처음 페이지로 이동하는 버튼 -->
-                                        <li class="pagination-first">
-                                            <a
-                                                href="#"
-                                                class="pagination-first-link"
-                                                rel="nofollow"
-                                            >
-                                                <span
-                                                    class="pagination-first-icon"
-                                                    aria-hidden="true"
-                                                    >«</span
-                                                >
-                                            </a>
-                                        </li>
-                                        <!-- 이전 페이지로 이동하는 버튼 -->
-                                        <li class="pagination-prev">
-                                            <a
-                                                href="#"
-                                                class="pagination-prev-link"
-                                                rel="prev nofollow"
-                                            >
-                                                <span
-                                                    class="pagination-prev-icon"
-                                                    aria-hidden="true"
-                                                    >‹</span
-                                                >
-                                            </a>
-                                        </li>
-                                        <!-- 페이지 번호 버튼 -->
-                                        <li class="pagination-page active">
-                                            <a
-                                                href="#"
-                                                class="pagination-page-link"
-                                                >1</a
-                                            >
-                                        </li>
+                                    <ul class="pagination-list inquiry-page">
+<!--                                        &lt;!&ndash; 처음 페이지로 이동하는 버튼 &ndash;&gt;-->
+<!--                                        <li class="pagination-first">-->
+<!--                                            <a-->
+<!--                                                href="#"-->
+<!--                                                class="pagination-first-link"-->
+<!--                                                rel="nofollow"-->
+<!--                                            >-->
+<!--                                                <span-->
+<!--                                                    class="pagination-first-icon"-->
+<!--                                                    aria-hidden="true"-->
+<!--                                                    >«</span-->
+<!--                                                >-->
+<!--                                            </a>-->
+<!--                                        </li>-->
+<!--                                        &lt;!&ndash; 이전 페이지로 이동하는 버튼 &ndash;&gt;-->
+<!--                                        <li class="pagination-prev">-->
+<!--                                            <a-->
+<!--                                                href="#"-->
+<!--                                                class="pagination-prev-link"-->
+<!--                                                rel="prev nofollow"-->
+<!--                                            >-->
+<!--                                                <span-->
+<!--                                                    class="pagination-prev-icon"-->
+<!--                                                    aria-hidden="true"-->
+<!--                                                    >‹</span-->
+<!--                                                >-->
+<!--                                            </a>-->
+<!--                                        </li>-->
+<!--                                        &lt;!&ndash; 페이지 번호 버튼 &ndash;&gt;-->
+<!--                                        <li class="pagination-page active">-->
+<!--                                            <a-->
+<!--                                                href="#"-->
+<!--                                                class="pagination-page-link"-->
+<!--                                                >1</a-->
+<!--                                            >-->
+<!--                                        </li>-->
 
-                                        <!-- 다음 페이지로 이동하는 버튼 -->
-                                        <li class="pagination-next">
-                                            <a
-                                                href="#"
-                                                class="pagination-next-link"
-                                                rel="next nofollow"
-                                            >
-                                                <span
-                                                    class="pagination-next-icon"
-                                                    aria-hidden="true"
-                                                    >›</span
-                                                >
-                                            </a>
-                                        </li>
-                                        <!-- 마지막 페이지로 이동하는 버튼 -->
-                                        <li class="pagination-last">
-                                            <a
-                                                href="#"
-                                                class="pagination-last-link"
-                                                rel="nofollow"
-                                            >
-                                                <span
-                                                    class="pagination-last-icon"
-                                                    aria-hidden="true"
-                                                    >»</span
-                                                >
-                                            </a>
-                                        </li>
+<!--                                        &lt;!&ndash; 다음 페이지로 이동하는 버튼 &ndash;&gt;-->
+<!--                                        <li class="pagination-next">-->
+<!--                                            <a-->
+<!--                                                href="#"-->
+<!--                                                class="pagination-next-link"-->
+<!--                                                rel="next nofollow"-->
+<!--                                            >-->
+<!--                                                <span-->
+<!--                                                    class="pagination-next-icon"-->
+<!--                                                    aria-hidden="true"-->
+<!--                                                    >›</span-->
+<!--                                                >-->
+<!--                                            </a>-->
+<!--                                        </li>-->
+<!--                                        &lt;!&ndash; 마지막 페이지로 이동하는 버튼 &ndash;&gt;-->
+<!--                                        <li class="pagination-last">-->
+<!--                                            <a-->
+<!--                                                href="#"-->
+<!--                                                class="pagination-last-link"-->
+<!--                                                rel="nofollow"-->
+<!--                                            >-->
+<!--                                                <span-->
+<!--                                                    class="pagination-last-icon"-->
+<!--                                                    aria-hidden="true"-->
+<!--                                                    >»</span-->
+<!--                                                >-->
+<!--                                            </a>-->
+<!--                                        </li>-->
                                     </ul>
                                 </nav>
                             </div>
