--- a/src/main/resources/templates/help/help.html
+++ b/src/main/resources/templates/help/help.html
@@ -27,7 +27,7 @@
                         </span>
                     </div>
                     <div class="go-to-write-button-container">
-                        <a href="/help/write" class="go-to-write-button">문의하기</a>
+                        <a href="/help/help-write" class="go-to-write-button">문의하기</a>
                     </div>
                 </div>
             </div>
