--- a/src/main/resources/templates/donation/donation-write.html
+++ b/src/main/resources/templates/donation/donation-write.html
@@ -6,7 +6,7 @@
         <title>기부 게시판 작성</title>
         <link
             rel="stylesheet"
-            href="../../static/css/donation/donation-write.css"
+            href="/css/donation/donation-write.css"
         />
         <link
             rel="icon"
@@ -237,5 +237,5 @@
             </div>
         </div>
     </body>
-    <script src="../../static/js/donation/donation-write.js"></script>
+    <script src="/static/js/donation/donation-write.js"></script>
 </html>
