--- a/src/main/resources/templates/help/help-write.html
+++ b/src/main/resources/templates/help/help-write.html
@@ -86,14 +86,14 @@
                                     <option selected="selected" value="-">
                                         -
                                     </option>
-                                    <option value="111">일반 문의</option>
-                                    <option value="222">
+                                    <option value="일반 문의">일반 문의</option>
+                                    <option value="봉사단체 가입 문의">
                                         봉사단체 가입 문의
                                     </option>
                                 </select>
                                 <div id="request-type-area">
-                                    <div value="111">&nbsp;일반 문의</div>
-                                    <div value="222">
+                                    <div value="일반 문의">&nbsp;일반 문의</div>
+                                    <div value="봉사단체 가입 문의">
                                         &nbsp;봉사단체 가입 문의
                                     </div>
                                 </div>
