첨부파일 작업 전 안전장치

--- a/src/main/resources/templates/donation/donation-inquiry.html
+++ b/src/main/resources/templates/donation/donation-inquiry.html
@@ -6,7 +6,7 @@
         <title>기부 조회</title>
         <link
             rel="stylesheet"
-            href="../../static/css/donation/donation-inquiry.css"
+            href="/css/donation/donation-inquiry.css"
         />
         <link
             rel="icon"
@@ -387,5 +387,5 @@
             </div>
         </div>
     </body>
-    <script src="../../static/js/donation/donation-inquiry.js"></script>
+    <script src="/js/donation/donation-inquiry.js"></script>
 </html>
