--- a/src/main/resources/templates/donation/donation-list.html
+++ b/src/main/resources/templates/donation/donation-list.html
@@ -6,7 +6,7 @@
         <title>기부 페이지 - 목록</title>
         <link
             rel="stylesheet"
-            href="../../static/css/donation/donation-list.css"
+            href="/css/donation/donation-list.css"
         />
     </head>
     <body>
@@ -188,5 +188,5 @@
             </main>
         </div>
     </body>
-    <script src="../../static/js/donation/donation-list.js"></script>
+    <script src="/js/donation/donation-list.js"></script>
 </html>
