--- a/src/main/resources/templates/donation/donation-update.html
+++ b/src/main/resources/templates/donation/donation-update.html
@@ -6,7 +6,7 @@
         <title>기부 게시판 수정</title>
         <link
             rel="stylesheet"
-            href="../../static/css/donation/donation-update.css"
+            href="/css/donation/donation-update.css"
         />
         <link
             rel="icon"
@@ -236,5 +236,5 @@
             </div>
         </div>
     </body>
-    <script src="../../static/js/donation/donation-update.js"></script>
+    <script src="/js/donation/donation-update.js"></script>
 </html>
