--- a/src/main/resources/templates/volunteer/volunteer-list.html
+++ b/src/main/resources/templates/volunteer/volunteer-list.html
@@ -137,13 +137,13 @@
                                                 </svg>
                                             </div>
                                             <div class="bottom-wrap">
-                                                <div width="100%" height="8px" class="bottom-drop-down"></div>
-                                                <div class="list-wrap">
-                                                    <div class="item" onclick="applyFilter('recent')">최신등록순</div>
-                                                    <div class="item" onclick="applyFilter('viewCount')">조회순</div>
-                                                    <div class="item" onclick="applyFilter('endingSoon')">마감임박순</div>
-                                                </div>
+                                            <div width="100%" height="8px" class="bottom-drop-down"></div>
+                                            <div class="list-wrap">
+                                                <div class="item" onclick="setView('recent')">최신등록순</div>
+                                                <div class="item" onclick="setView('viewCount')">조회순</div>
+                                                <div class="item" onclick="setView('endingSoon')">마감임박순</div>
                                             </div>
+                                        </div>
                                         </div>
                                     </div>
                                 </div>
@@ -178,8 +178,9 @@
         </div>
     </body>
     <script th:inline="javascript">
-        const lists = [[${lists}]];
+        let lists = [[${lists}]];
         const pagination = [[${pagination}]];
     </script>
     <script src="/js/volunteer/volunteer-list.js"></script>
+    <script src="/js/volunteer/service/volunteer-service.js"></script>
 </html>
