--- a/src/main/resources/templates/volunteer/volunteer-list.html
+++ b/src/main/resources/templates/volunteer/volunteer-list.html
@@ -136,12 +136,12 @@
                                                     <defs></defs>
                                                 </svg>
                                             </div>
-                                            <div class="bottom-wrap">
+                                        <div class="bottom-wrap">
                                             <div width="100%" height="8px" class="bottom-drop-down"></div>
                                             <div class="list-wrap">
-                                                <div class="item" onclick="setView('recent')">최신등록순</div>
-                                                <div class="item" onclick="setView('viewCount')">조회순</div>
-                                                <div class="item" onclick="setView('endingSoon')">마감임박순</div>
+                                                <div class="item" onclick="fetchFilteredVolunteers('recent')">최신등록순</div>
+                                                <div class="item" onclick="fetchFilteredVolunteers('viewCount')">조회순</div>
+                                                <div class="item" onclick="fetchFilteredVolunteers('endingSoon')">마감임박순</div>
                                             </div>
                                         </div>
                                         </div>
