--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -2907,12 +2907,7 @@
             </div>
         </div>
     </body>
-    <script th:inline="javascript">
-        const inquiries = [[${inquiries}]];
-        const pagination = [[${pagination}]];
-        console.log("프론트엔드 pagination 데이터:", pagination);
-        const search = [[${search}]];
-    </script>
+
     <!-- 관리자 홈 -->
     <script src="/js/admin.js"></script>
     <script src="/js/adminPage/admin_page/admin.js"></script>
@@ -2933,4 +2928,5 @@
     <script src="/js/adminPage/admin_post/postList_filter.js"></script>
     <!-- 게시글 조회 -->
     <script src="/js/donation/donation-inquiry.js"></script>
+<script src="/js/admin-event.js"></script>
 </html>
