--- a/src/main/resources/templates/review/review-write.html
+++ b/src/main/resources/templates/review/review-write.html
@@ -248,6 +248,8 @@ ex) 경로식당 배식 봉사"
                                 작성 완료
                             </button>
                         </div>
+                        <input type="text" name="uuid" id="">
+                        <input type="text" name="path" id="">
                     </form>
                 </main>
             </div>
