--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -2928,5 +2928,5 @@
     <script src="/js/adminPage/admin_post/postList_filter.js"></script>
     <!-- 게시글 조회 -->
     <script src="/js/donation/donation-inquiry.js"></script>
-<script src="/js/admin-event.js"></script>
+<script src="/js/admin/admin-service.js"></script>
 </html>
