--- a/src/main/resources/templates/volunteer/volunteer-list.html
+++ b/src/main/resources/templates/volunteer/volunteer-list.html
@@ -136,14 +136,15 @@
                                                     <defs></defs>
                                                 </svg>
                                             </div>
-                                        <div class="bottom-wrap">
-                                            <div width="100%" height="8px" class="bottom-drop-down"></div>
-                                            <div class="list-wrap">
-                                                <div class="item" onclick="fetchFilteredVolunteers('recent')">최신등록순</div>
-                                                <div class="item" onclick="fetchFilteredVolunteers('viewCount')">조회순</div>
-                                                <div class="item" onclick="fetchFilteredVolunteers('endingSoon')">마감임박순</div>
+                                            <div class="bottom-wrap">
+                                                <div width="100%" height="8px" class="bottom-drop-down"></div>
+                                                <div class="list-wrap">
+                                                    <a href="/volunteer/volunteer-list?order=recent" class="item">최신등록순</a>
+                                                    <a href="/volunteer/volunteer-list?order=viewCount" class="item">조회순</a>
+                                                    <a href="/volunteer/volunteer-list?order=endingSoon" class="item">마감임박순</a>
+                                                </div>
                                             </div>
-                                        </div>
+
                                         </div>
                                     </div>
                                 </div>
