--- a/src/main/resources/templates/mypage/mypage-profile-edit.html
+++ b/src/main/resources/templates/mypage/mypage-profile-edit.html
@@ -56,13 +56,12 @@
                                                         class="iBfDiv"
                                                         multiple
                                                 />
-                                                <label for="profileImageInput" class="kHfLkV">
-                                                    <img
-                                                            src="https://cdn-dantats.stunning.kr/client/73287d9/static/media/ico-pen-edit-gray.d058146f.svg"
-                                                            class="edit-img"
-                                                    />
-                                                </label>
                                             </div>
+                                            <div
+                                                    id="profileThumbnail"
+                                                    class="profile-thumbnail"
+                                                    style="width: 100px; height: 100px; background-size: cover; background-position: center;"
+                                            ></div>
                                         </div>
                                         <div class="profile-info--content">
                                             <div>
