--- a/src/main/resources/templates/mypage/mypage.html
+++ b/src/main/resources/templates/mypage/mypage.html
@@ -30,15 +30,7 @@
                                                     >
                                                         <div class="profile-thumb-img">
                                                             <div class="member-thumb member-thumb2" id="mainProfileThumbnail"
-                                                                 th:if="${member != null}"
-                                                                 th:style="'background-image: url(' +
-                     (${member.profileFileName} != null and ${member.profileFilePath} != null ?
-                       '/profile/display?profileFilePath=' + ${member.profileFilePath} + '&profileFileName=' + ${member.profileFileName} :
-                       'https://cdn-dantats.stunning.kr/static/feature/profile/default-profile.png.small?q=80&f=webp&t=crop&s=256x256') +
-                     ');'">
-                                                            </div>
-                                                            <div th:if="${member == null}" class="member-thumb member-thumb2" id="mainProfileThumbnail"
-                                                                 style="background-image: url('https://cdn-dantats.stunning.kr/static/feature/profile/default-profile.png.small?q=80&f=webp&t=crop&s=256x256');">
+                                                                 th:style="'background-image: url(\'/profile/display?memberId=' + ${member.id} + '\');'">
                                                             </div>
                                                         </div>
 
