--- a/src/main/resources/static/css/mypage/mypage-profile-edit.css
+++ b/src/main/resources/static/css/mypage/mypage-profile-edit.css
@@ -78,7 +78,7 @@ html body #root #app .wrap {
 }
 
 .cRFSjf {
-    width: 100%;
+    width: 1280px;
     min-width: 726px;
     max-width: unset;
     margin: 0px auto;
