--- a/src/main/resources/templates/volunteer/volunteer-list.html
+++ b/src/main/resources/templates/volunteer/volunteer-list.html
@@ -87,7 +87,7 @@
                             ><a class="page-btn">6</a><a class="page-btn">7</a
                             ><a class="page-btn">8</a><a class="page-btn">9</a
                             ><a class="page-btn">10</a
-                            ><a class="page-btn next"
+                            ><a class="next-page-btn"
                                 ><svg viewBox="0 0 12 12" class="icon-default">
                                     <path
                                         fill-rule="evenodd"
