--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -2909,6 +2909,8 @@
     </body>
 
     <!-- 관리자 홈 -->
+    <script src="/js/admin/admin_service.js"></script>
+    <script src="/js/admin/admin_layout.js"></script>
     <script src="/js/admin.js"></script>
     <script src="/js/adminPage/admin_page/admin.js"></script>
     <!-- 회원 목록 -->
@@ -2928,5 +2930,5 @@
     <script src="/js/adminPage/admin_post/postList_filter.js"></script>
     <!-- 게시글 조회 -->
     <script src="/js/donation/donation-inquiry.js"></script>
-<script src="/js/admin/admin-service.js"></script>
+
 </html>
