--- a/src/main/resources/templates/mypage/mypage.html
+++ b/src/main/resources/templates/mypage/mypage.html
@@ -390,7 +390,7 @@
                                                                         정 수
                                                                     </div>
                                                                     <div class="h1 career-info-content" style="font-size: 19px">
-                                                                        <span id="memberJung"></span> 정
+                                                                        <span id="memberJung"></span>
                                                                     </div>
                                                                 </div>
                                                             </div>
