--- a/src/main/resources/templates/volunteer/volunteer-list.html
+++ b/src/main/resources/templates/volunteer/volunteer-list.html
@@ -80,9 +80,9 @@
                                 <li></li>
                             </ul>
                         </article>
-                        <nav class="page-container paginator">
-                            <a class="page-btn active">1</a
-                            ><a class="page-btn">2</a><a class="page-btn">3</a
+                        <nav class="page-container paginator" id="paging">
+                            <a class="page-btn active">1</a>
+                            <a class="page-btn">2</a><a class="page-btn">3</a
                             ><a class="page-btn">4</a><a class="page-btn">5</a
                             ><a class="page-btn">6</a><a class="page-btn">7</a
                             ><a class="page-btn">8</a><a class="page-btn">9</a
