--- a/src/main/resources/templates/review/review-write.html
+++ b/src/main/resources/templates/review/review-write.html
@@ -265,7 +265,7 @@ ex) 경로식당 배식 봉사"
 //         console.log(file);
 //         const formData = new FormData();
 //         formData.append("file", file);
-//         reviewWriteService.upload(formData);
+//         donationWriteService.upload(formData);
 //     })
 // });
 
