--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -1433,7 +1433,7 @@
                                 </nav>
                             </div>
                         </section>
-                        <section class="admin-page" data-value="고객센터 문의 답변">
+                        <section class="admin-page" data-value="고객센터 문의 답변" id="inquiry_answer">
                             <div style="max-width: 1080px; margin: 24px 16px 0;">
                                 <h1>고객센터 문의 답변</h1>
                     <div class="form">
