--- a/src/main/resources/templates/volunteer/volunteer-list.html
+++ b/src/main/resources/templates/volunteer/volunteer-list.html
@@ -80,10 +80,7 @@
                                 <li></li>
                             </ul>
                         </article>
-                        <nav class="page-container paginator">
-
-
-
+                        <nav class="page-container paginator" id="paging">
                         </nav>
                         <a class="next-page-btn">
                             <svg viewBox="0 0 12 12" class="icon-default">
@@ -105,6 +102,6 @@
         const pagination = [[${pagination}]];
     </script>
     <script src="/js/volunteer/volunteer-layout.js" ></script>
-    <script src="/js/volunteer/volunteer-event.js"></script>
     <script src="/js/volunteer/service/volunteer-service.js"></script>
+    <script src="/js/volunteer/volunteer-event.js"></script>
 </html>
