--- a/src/main/resources/templates/mypage/mypage.html
+++ b/src/main/resources/templates/mypage/mypage.html
@@ -1628,7 +1628,7 @@
                                                                             <label id="gratitude-totalCount" class="ezikFA">0</label>
                                                                         </div>
                                                                     </div>
-                                                                    <a class="jBsNEF btn-request btn-request-case-2" href="#">
+                                                                    <a class="jBsNEF btn-request btn-request-case-2 btn-gowrite" href="#">
                                                                         <span class="visual-correction">인사 작성하기</span>
                                                                     </a>
                                                                 </div>
@@ -1750,16 +1750,16 @@
                                                                         </div>
                                                                     </div>
                                                                     <a class="jBsNEF btn-request btn-request-case-2" href="#" style="margin-left: 400px;">
-                        <span class="visual-correction" id="approve">
-                            승인하기
-                            <div class="request-description-tooltip"></div>
-                        </span>
+                                                                        <span class="visual-correction" id="approve">
+                                                                            승인하기
+                                                                            <div class="request-description-tooltip"></div>
+                                                                        </span>
                                                                     </a>
                                                                     <a class="jBsNEF btn-request btn-request-case-2" id="refuse" href="#" style="margin-left: 10px;">
-                        <span class="visual-correction">
-                            거절하기
-                            <div class="request-description-tooltip"></div>
-                        </span>
+                                                                        <span class="visual-correction">
+                                                                            거절하기
+                                                                            <div class="request-description-tooltip"></div>
+                                                                        </span>
                                                                     </a>
                                                                 </div>
                                                             </div>
@@ -1900,6 +1900,7 @@
                     "
                 ></div>
             </div>
+        </div>
         </div>
     </body>
     <script src="/js/mypage/mypage.js"></script>
