--- a/src/main/resources/templates/volunteer/volunteer-inquiry.html
+++ b/src/main/resources/templates/volunteer/volunteer-inquiry.html
@@ -387,5 +387,8 @@
             </div>
         </div>
     </body>
+    <script th:inline="javascript">
+        const inquirys = [[${inquirys}]]
+    </script>
     <script src="../../static/js/volunteer/volunteer-inquiry.js"></script>
 </html>
